<resources>
    <string name="drawer_tagline">Drive Together</string>
    <string name="drawer_mobi_name">모비</string>
    <string name="drawer_luna_name">Luna</string>
    <string name="drawer_no_friend">친구 선택 중</string>
    <string name="drawer_profile_subtitle">함께, 더 멀리 가요.</string>
    <string name="drawer_menu_home">홈</string>
    <string name="drawer_menu_notifications">알림</string>
    <string name="drawer_menu_appearance">꾸미기</string>
    <string name="drawer_menu_vehicle">차량 상태</string>
    <string name="drawer_menu_quests">퀘스트</string>
    <string name="drawer_settings">설정</string>
    <string name="close">닫기</string>
    <string name="drawer_version">v%1$s</string>
    <string name="debugger_unlock_remaining">debugger 버튼 활성화까지 %1$d회 남았습니다</string>
    <string name="debugger_unlocked">debugger 버튼이 활성화 되었습니다</string>
    <string name="debugger_lock_remaining">debugger 버튼 비활성화까지 %1$d회 남았습니다</string>
    <string name="debugger_locked">debugger 버튼이 비활성화 되었습니다</string>
</resources>
...
